добавлено всплывающее окно с топ-5 значений и возможность фильтрации по ним
